Updated for JDK 15